feat: add update department route
